/**
 * @author Lestiboudois Maxime & Parisod Nathan
 * @date 20/01/2025
 */

import javax.swing.*;

public class DessinDisqueApp {
    public static void main(String[] args) {
        SwingUtilities.invokeLater(DessinDisqueFrame::new);
    }
}
